--- a/style.css
+++ b/style.css
@@ -5,3 +5,14 @@ h1{
 p{
     color: pink;
 }
+div{
+    border: 1px solid yellow;
+    padding-left: 5px;
+    margin: 3px;
+}
+#first{
+    background-color: light green;
+}
+.yellowb{
+
+}
