--- a/style.css
+++ b/style.css
@@ -1,15 +1,55 @@
-h1{
-    color: rgb(10,50,200);
-    font-size: 25px;
+div {
+    /* border: 1px solid red; */
+    margin: 10px;
 }
-p{
-    color: pink;
+#container {
+    margin-left: 50px;
+    margin-right: 50px;
+    overflow: hidden;
+    min-height: 400px;
 }
-div{
-    border: 1px solid yellow;
-    padding-left: 5px;
-    margin: 3px;
+#left {
+    width: 20%;
+    float: left;
+    margin: 20px;
 }
-#first{
-    background-color: light green;
+#right {
+    /* background-color: yellow; */
+    float: right;
+    width: 20%;
+    margin: 20px;
+}
+#content {
+    background-color: teal;
+}
+#covid {
+    width: 100px;
+    float: right;
+}
+#content p {
+    overflow: hidden;
+}
+#second{
+    background-color: black;
+    color: white;
+    position: relative;
+    top: 50px;
+    z-index: 1;
+}
+#third p{
+    background-color: yellow;
+    z-index: 2000;
+}
+#announcement{
+    background-color: yellow;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+}
+#stick{
+    position: sticky;
+    top: 0;
+    color: blue;
+    z-index: 1000;
+    background-color: green;
 }
